# django-trix-richtext

./: .gitignore  LICENSE  README.md  pyproject.toml
trixeditor/: __init__.py  apps.py  fields.py  widgets.py
trixeditor/static/widgets/css/: trix.css
trixeditor/templates/trixeditor/widgets/: trix.html
