[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-trixeditor"
authors = [{name = "Weinan Tang", email = "twn39@163.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0"
]
dynamic = ["version", "description"]
keywords = ["django", "trix", "trix editor"]
dependencies = [
    "Django >=4.0"
]
requires-python = ">=3.5"
readme = "README.md"

[tool.flit.module]
name = "trixeditor"

[project.urls]
Home = "https://github.com/twn39"
